# apps/api/src/impl/remittances.api.ts
@@ -3,30 +3,27 @@ import { Injectable } from '@nestjs/common';
 import type { Observable } from 'rxjs';
 import type { Request } from 'express';
 import { RemittancesApi } from '@qzd/sdk-api/server';
-import type {
-  AcquireQZDForUSRemittance202Response,
-  QuoteResponse,
-  USRemitAcquireQZDRequest,
-} from '@qzd/sdk-api/server';
+import type { QuoteResponse, Transaction, USRemitAcquireQZDRequest } from '@qzd/sdk-api/server';
+import { RemittancesService } from '../remittances.service.js';
 
 @Injectable()
 export class RemittancesApiImpl extends RemittancesApi {
+  constructor(private readonly service: RemittancesService = new RemittancesService()) {
+    super();
+  }
+
   override acquireQZDForUSRemittance(
     uSRemitAcquireQZDRequest: USRemitAcquireQZDRequest,
-    request: Request,
-  ):
-    | AcquireQZDForUSRemittance202Response
-    | Promise<AcquireQZDForUSRemittance202Response>
-    | Observable<AcquireQZDForUSRemittance202Response> {
-    throw new Error('Method not implemented.');
+    _request: Request,
+  ): Transaction | Promise<Transaction> | Observable<Transaction> {
+    return this.service.acquireQzd(uSRemitAcquireQZDRequest);
   }
 
   override simulateQuote(
-    sellCurrency: string,
-    sellAmount: string,
-    buyCurrency: string,
-    request: Request,
+    usdAmount: string,
+    scenario: string = 'DEFAULT',
+    _request: Request,
   ): QuoteResponse | Promise<QuoteResponse> | Observable<QuoteResponse> {
-    throw new Error('Method not implemented.');
+    return this.service.simulateQuote(usdAmount, scenario);
   }
 }
